# python-tutorial

./: 06_modules_and_packages.ipynb  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
tutorial-cli/: README.md  pyproject.toml
tutorial-cli/tutorial_cli/: __init__.py  cli.py
