[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutorial-cli"
version = "0.1.0"
description = "A simple Git wrapper for Python tutorial students"
authors = [
    {name = "Python Tutorial Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
tutorial = "tutorial_cli.cli:app"

[project.urls]
Homepage = "https://github.com/epfllibrary/python-tutorial"
